--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <link rel="preload" href="fonts/suhuacuan.woff2" as="font" crossorigin="" type="font/woff2" />
     <link rel="preload" as="image" href="Icon_text_3.webp" />
     <link rel="preload" as="image" href="1.jpg" />
-    <link rel="preload" as="image" href="img/Icon_text_2.webp" />
-    <link rel="preload" as="image" href="img/see-who-liked-you.webp" />
-    <link rel="preload" as="image" href="img/unlimited-chat-and-meet.webp" />
-    <link rel="preload" as="image" href="img/unlimited-swipes.webp" />
-    <link rel="preload" as="image" href="img/working-in-two-languages.webp" />
-    <link rel="preload" as="image" href="img/logo-transparent.png" />
-    <link rel="stylesheet" href="css/style.css" data-precedence="next" />
-    <link rel="stylesheet" href="css/fonts.css" data-precedence="next" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/Icon_text_2.webp" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/see-who-liked-you.webp" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/unlimited-chat-and-meet.webp" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/unlimited-swipes.webp" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/working-in-two-languages.webp" />
+    <link rel="preload" as="image" href="https://kolomindonesia.github.io/img/logo-transparent.png" />
+    <link rel="stylesheet" href="https://kolomindonesia.github.io/css/style.css" data-precedence="next" />
+    <link rel="stylesheet" href="https://kolomindonesia.github.io/css/fonts.css" data-precedence="next" />
     <link rel="preload" as="script" fetchPriority="low" href="js/webpack-2418e743b9981b9e.js" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
-    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://kolomindonesia.github.io/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://kolomindonesia.github.io/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://kolomindonesia.github.io/img/favicon-16x16.png" />
+    <link rel="mask-icon" href="https://kolomindonesia.github.io/img/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <title>Kolomindonesia | Kolom Informasi Berita Baik Indonesia</title>
     <meta name="description" content="Kolomindonesia" />
-    <link rel="icon" href="img/favicon.ico" />
+    <link rel="icon" href="https://kolomindonesia.github.io/img/favicon.ico" />
     <meta name="next-size-adjust" />
    
-    <script src="js/polyfills.js" noModule=""></script>
+    <script src="https://kolomindonesia.github.io/https://kolomindonesia.github.io/js/polyfills.js" noModule=""></script>
   </head>
   <body class="__className_9df5e9 bg-gray-100">
     <div class="flex flex-col justify-between min-h-screen h-full">
@@ -35,7 +35,7 @@
           <div class="hidden lg:block">
             <div class="flex items-center justify-between whitespace-nowrap w-full h-[70px] px-8">
               <a href="https://cheshmack.com/">
-                <img src="img/logo-kolomindonesia.png" alt="Kolomindonesia Logo" width="229" height="60" />
+                <img src="https://kolomindonesia.github.io/img/logo-kolomindonesia.png" alt="Kolomindonesia Logo" width="229" height="60" />
               </a>
               <div class="flex flex-row gap-[40px] text-center w-fit">
                 <div>
@@ -65,7 +65,7 @@
             <div class="px-8 h-[70px] flex justify-between w-full items-center">
               <div class="w-fit">
                 <a href="https://cheshmack.com/">
-                  <img src="img/logo-kolomindonesia.png" alt="Kolomindonesia Logo" class="object-contain" width="229" height="60" />
+                  <img src="https://kolomindonesia.github.io/img/logo-kolomindonesia.png" alt="Kolomindonesia Logo" class="object-contain" width="229" height="60" />
                 </a>
               </div>
               <button>
@@ -84,35 +84,35 @@
               <div class="swiper w-full h-full">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <img src="1.jpg" class="object-cover bg-no-repeat w-full h-full" />
+                    <img src="https://kolomindonesia.github.io/1.jpg" class="object-cover bg-no-repeat w-full h-full" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="2.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
+                    <img src="https://kolomindonesia.github.io/2.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="3.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
+                    <img src="https://kolomindonesia.github.io/3.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="4.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
+                    <img src="https://kolomindonesia.github.io/4.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
                   </div>
                   <div class="swiper-slide">
-                    <img src="5.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
+                    <img src="https://kolomindonesia.github.io/5.jpg" class="object-cover bg-no-repeat w-full h-full" loading="lazy" />
                   </div>
                 </div>
               </div>
             </div>
             <div class="flex items-center flex-col absolute z-10 top-1/2  max-w-[670px] -translate-y-1/2 pt-[100px] lg:pt-0">
               <div class="relative">
-                <img width="1763" height="1241" src="img/logo-tengah-kolomindonesia.png" class="h-[169px] w-[240px] sm:h-[240px] sm:w-[340px] md:h-[300px] md:w-[424px] lg:h-[235px] lg:w-[333px] xl:h-[268px] xl:w-[380px] 2xl:h-[293px] 2xl:w-[416px]" alt="logo" />
+                <img width="1763" height="1241" src="https://kolomindonesia.github.io/img/logo-tengah-kolomindonesia.png" class="h-[169px] w-[240px] sm:h-[240px] sm:w-[340px] md:h-[300px] md:w-[424px] lg:h-[235px] lg:w-[333px] xl:h-[268px] xl:w-[380px] 2xl:h-[293px] 2xl:w-[416px]" alt="logo" />
               </div>
               <h1 class="text-center text-white mt-[20px] text-[32px] leading-[60px] sm:text-[48px] md:text-[40px] xl:text-[48px]">Kolom Informasi Berita Baik <br />Indonesia</h1>
               <div class="pt-[24px]"></div>
               <div class="flex flex-row gap-x-3 sm:gap-x-5 justify-center items-center">
                 <a target="_blank" href="https://apps.apple.com/app/id1661593549" rel="noopener noreferrer">
-                  <img src="img/apple.webp" class="h-auto w-[130px] sm:w-36 " alt="App Store" loading="lazy" />
+                  <img src="https://kolomindonesia.github.io/img/apple.webp" class="h-auto w-[130px] sm:w-36 " alt="App Store" loading="lazy" />
                 </a>
                 <a target="_blank" href="https://play.google.com/store/apps/details?id=uk.Kolomindonesia.android" rel="noopener noreferrer">
-                  <img src="img/google-play.webp" class="h-auto w-36 sm:mt-0 sm:w-40" alt="Google Play" loading="lazy" />
+                  <img src="https://kolomindonesia.github.io/img/google-play.webp" class="h-auto w-36 sm:mt-0 sm:w-40" alt="Google Play" loading="lazy" />
                 </a>
               </div>
             </div>
@@ -123,13 +123,13 @@
             </div>
             <div class="flex flex-col lg:flex-row items-center lg:justify-center xl:mx-[20px] 2xl:mx-[40px]">
               <div class="justify-self-center mx-[16px] sm:mx-[88px] md:mb-6 lg:mb-[80px] max-w-[500px] lg:max-w-[400px] xl:max-w-[600px]">
-                <img src="img/see-who-liked-you.webp" class="object-cover w-full lg:w-[400px]" />
+                <img src="https://kolomindonesia.github.io/img/see-who-liked-you.webp" class="object-cover w-full lg:w-[400px]" />
                 <div class="flex justify-center">
                   <h3 class="text-tiko-primary text-[24px] font-semibold text-center">You can see who liked you</h3>
                 </div>
               </div>
               <div class="mx-[16px] sm:mx-[88px] mb-6 lg:mb-[80px] max-w-[500px] lg:max-w-[400px] xl:text-[32px] xl:max-w-[600px]">
-                <img src="img/unlimited-chat-and-meet.webp" class="object-cover w-full lg:w-[400px]" />
+                <img src="https://kolomindonesia.github.io/img/unlimited-chat-and-meet.webp" class="object-cover w-full lg:w-[400px]" />
                 <div class="flex justify-center">
                   <h3 class="text-tiko-secondary text-[24px] font-semibold text-center">Unlimited chat and Meet</h3>
                 </div>
@@ -156,7 +156,7 @@
           <div class="flex flex-col gap-y-10 mt-10">
             <section class="flex flex-col-reverse lg:flex-row-reverse items-center justify-center gap-x-[100px] text-center sm:px-10 lg:text-left xl:px-0 pt-[12px] lg:pt-0">
               <div class="max-w-[500px]">
-                <img alt="Img Description" src="img/unlimited-swipes.webp" class="object-contain w-full" />
+                <img alt="Img Description" src="https://kolomindonesia.github.io/img/unlimited-swipes.webp" class="object-contain w-full" />
               </div>
               <div>
                 <div class="max-w-[400px]">
@@ -168,7 +168,7 @@
             </section>
             <section class="flex items-center justify-center flex-col-reverse gap-x-[100px] text-center sm:px-10 lg:text-left xl:px-0 lg:flex-row">
               <div class="max-w-[500px]">
-                <img src="img/working-in-two-languages.webp" class="object-contain w-full" />
+                <img src="https://kolomindonesia.github.io/img/working-in-two-languages.webp" class="object-contain w-full" />
               </div>
               <div>
                 <div class="max-w-[400px]">
@@ -183,7 +183,7 @@
               <h2 class="text-[40px] font-bold leading-[48px] -tracking-[1px] sm:text-[52px] sm:leading-[68px] sm:-tracking-[2px] text-center">What our members say</h2>
               <div class="flex flex-col items-center justify-center lg:flex-row lg:items-start pb-[60px]">
                 <div class="mt-8 flex flex-col items-center space-y-4 px-[10px] text-center md:max-w-[570px] lg:max-w-[298px] xl:max-w-[345px]">
-                  <img src="img/rating1.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
+                  <img src="https://kolomindonesia.github.io/img/rating1.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
                   <p class="leading-[24px] sm:text-[18px] md:text-[20px]">Kourosh</p>
                   <h3 class="text-2xl font-semibold leading-9 -tracking-[0.5px]">“
                     <!-- -->Wow, it&#x27;s really FREE dating app
@@ -218,7 +218,7 @@
                   </div>
                 </div>
                 <div class="mt-8 flex flex-col items-center space-y-4 px-[10px] text-center md:max-w-[570px] lg:max-w-[298px] xl:max-w-[345px]">
-                  <img src="img/rating2.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
+                  <img src="https://kolomindonesia.github.io/img/rating2.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
                   <p class="leading-[24px] sm:text-[18px] md:text-[20px]">Tala</p>
                   <h3 class="text-2xl font-semibold leading-9 -tracking-[0.5px]">“
                     <!-- -->Great service and I really liked how easy it was to use
@@ -253,7 +253,7 @@
                   </div>
                 </div>
                 <div class="mt-8 flex flex-col items-center space-y-4 px-[10px] text-center md:max-w-[570px] lg:max-w-[298px] xl:max-w-[345px]">
-                  <img src="img/rating3.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
+                  <img src="https://kolomindonesia.github.io/img/rating3.webp" loading="lazy" class="h-20 w-20 rounded-full object-cover" alt="User Image" />
                   <p class="leading-[24px] sm:text-[18px] md:text-[20px]">Kate</p>
                   <h3 class="text-2xl font-semibold leading-9 -tracking-[0.5px]">“
                     <!-- -->I met my husband through Kolomindonesia
@@ -290,10 +290,10 @@
               </div>
               <div class="flex flex-row gap-x-3 sm:gap-x-5 justify-center items-center">
                 <a target="_blank" href="https://apps.apple.com/app/id1661593549" rel="noopener noreferrer">
-                  <img src="img/apple.webp" class="h-auto w-[130px] sm:w-36 " alt="App Store" loading="lazy" />
+                  <img src="https://kolomindonesia.github.io/img/apple.webp" class="h-auto w-[130px] sm:w-36 " alt="App Store" loading="lazy" />
                 </a>
                 <a target="_blank" href="https://play.google.com/store/apps/details?id=uk.Kolomindonesia.android" rel="noopener noreferrer">
-                  <img src="img/google-play.webp" class="h-auto w-36 sm:mt-0 sm:w-40" alt="Google Play" loading="lazy" />
+                  <img src="https://kolomindonesia.github.io/img/google-play.webp" class="h-auto w-36 sm:mt-0 sm:w-40" alt="Google Play" loading="lazy" />
                 </a>
               </div>
             </div>
@@ -323,6 +323,6 @@
       </div>
     </div>
     <div class="Toastify"></div>
-    <script src="js/toastify.js" async=""></script>
+    <script src="https://kolomindonesia.github.io/js/toastify.js" async=""></script>
   </body>
 </html>
